crates/parse/src/tests/snapshots/struct_empty.snap
---
source: crates/parse/src/tests.rs
assertion_line: 360
expression: "(test[1], ast, ast_string)"
---
- "struct Foo {}"
- Ok:
    nodes:
      - kind:
          Struct:
            name: "main::Foo"
            fields: []
            methods: []
- "(struct main::Foo '() '())"

