crates/parse/src/tests/snapshots/struct_field_selector_bad.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- x.
- Err:
    - message: "Expecting field or method name after struct selector. Got `EOF`"
      line: 0
      column: 0
- "Expecting field or method name after struct selector. Got `EOF`"

