crates/parse/src/tests/snapshots/struct_field_selector_bad2.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- x.y(a
- Err:
    - message: "Expecting `,` or `CloseParen` in method call argument list. Got `a`"
      line: 1
      column: 5
- "Expecting `,` or `CloseParen` in method call argument list. Got `a` at 1:5"

