crates/parse/src/tests/snapshots/struct_method_selector_bad1.snap
---
source: crates/parse/src/tests.rs
assertion_line: 402
expression: "(test[1], ast, ast_string)"
---
- x.y(
- Err:
    message: "Expecting `)` in method call. Got `EOF`"
    line: 0
    column: 0
- "Expecting `)` in method call. Got `EOF`"

