crates/parse/src/tests/snapshots/struct_methods_only.snap
---
source: crates/parse/src/tests.rs
assertion_line: 359
expression: "(test[1], ast, ast_string)"
---
- "\nstruct Foo {\n    fn c() -> int {\n        1\n    }\n    fn d() {}\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: Foo
            fields: []
            methods:
              - kind:
                  Fn:
                    proto:
                      name: _Foo_c
                      args: []
                      ret_ty: Int32
                      is_extern: false
                      module: main
                    body:
                      kind:
                        Block:
                          list:
                            - kind:
                                Lit:
                                  value:
                                    UInt64: 1
                                  ty: ~
                          ty: ~
              - kind:
                  Fn:
                    proto:
                      name: _Foo_d
                      args: []
                      ret_ty: Void
                      is_extern: false
                      module: main
                    body:
                      kind:
                        Block:
                          list: []
                          ty: ~
- "(struct Foo '() '((define (_Foo_c) '(1)) (define (_Foo_d) '()))))"

